exports[`App renders header when native 1`] = `
<div
  className="push-double-bottom@palm soft-half-bottom@palm push-double-left@palm-wide-and-up soft-double-left@palm-wide-and-up">
  <div
    className="one two">
    <Meta />
    <Connect(HeaderWithoutData) />
    <div
      data-status-scroll={true}>
      <h1>
        test
      </h1>
    </div>
    <Connect(SideModalContainerWithoutData) />
    <mockConstructor />
    <Watermark />
  </div>
</div>
`;

exports[`App renders with props 1`] = `
<div
  className="push-double-bottom@palm soft-half-bottom@palm push-double-left@palm-wide-and-up soft-double-left@palm-wide-and-up">
  <div
    className="one two">
    <Meta />
    <div
      data-status-scroll={true}>
      <h1>
        test
      </h1>
    </div>
    <Connect(SideModalContainerWithoutData) />
    <mockConstructor />
    <Watermark />
  </div>
</div>
`;

exports[`Blank is blank 1`] = `<div />`;

exports[`GlobalWithoutData renders with props 1`] = `
<div
  id="global">
  <App
    client={Object {}}
    dispatch={[Function]} />
  <MeteorDataContainer
    client={Object {}}
    dispatch={[Function]} />
</div>
`;

exports[`Watermark renders 1`] = `
<div
  className="global-watermark_11ogz0s">
  <h4
    className="soft-half flush text-light-primary uppercase watermark watermark_1i744g visuallyhidden@handheld">
    NewSpring
  </h4>
</div>
`;
